--- a/index.html
+++ b/index.html
@@ -286,5 +286,7 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+     <!--Sumo Script-->                         
+    <script async>(function(s,u,m,o,j,v){j=u.createElement(m);v=u.getElementsByTagName(m)[0];j.async=1;j.src=o;j.dataset.sumoSiteId='a3d72ba0d9cc8a32aa2d491e3947d05216130ed8000d594cc2d60e57d8c043d1';v.parentNode.insertBefore(j,v)})(window,document,'script','//load.sumo.com/');</script>
   </body>
 </html>
