--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
         </div>
 
         <!-- Sumo -->
-
-
+<span data-sumome-listbuilder-embed-id="3a1e5455c741f74d92defcdfd9ab6318b888e7e7d489e76b27546a968fbf70f8"></span>
         <!-- Sumo End -->
 
         <!-- <div class="subscribe">
