--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
+
+    <!-- =======================================================
+  * Template Name: ComingSoon - v4.7.0
+  * Template URL: https://bootstrapmade.com/comingsoon-free-html-bootstrap-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
   </head>
 
   <body>
@@ -60,6 +67,42 @@
             <h4>Seconds</h4>
           </div>
         </div>
+
+        <!-- Sumo -->
+
+
+        <!-- Sumo End -->
+
+         <div class="subscribe">
+          <h4>Subscribe now to get the latest updates!</h4>
+          <form
+            action="forms/notify.php"
+            method="post"
+            role="form"
+            class="php-email-form"
+          >
+            <div class="subscribe-form">
+              <input type="email" name="email" /><input
+                type="submit"
+                value="Subscribe"
+              />
+            </div>
+            <div class="mt-2">
+              <div class="loading">Loading</div>
+              <div class="error-message"></div>
+              <div class="sent-message">
+                Your notification request was sent. Thank you!
+              </div>
+            </div>
+          </form>
+        </div> 
+
+        <div class="social-links text-center">
+          <a href="new.html" class="twitter"><i class="bi bi-twitter"></i></a>
+          <a href=new.html" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="new.html" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="new.html" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        </div>
       </div>
     </header>
     <!-- End #header -->
@@ -84,6 +127,25 @@
                 We created a small level idea into a business as Sevice & Educational company. 
                 We serve few Tech Gigs and Teach few Technical  Conspets. For the updated subscribe Us or Mail Us - I Am Intersted. 
                 Random scribbling as follows..  
+              </p>
+              <ul>
+                <li>
+                  <i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex
+                  ea commodo consequa
+                </li>
+                <li>
+                  <i class="bi bi-check"></i> Duis aute irure dolor in
+                  reprehenderit in voluptate velit
+                </li>
+                <li>
+                  <i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex
+                  ea commodo consequat. Duis aute irure dolor in reprehenderit
+                  in
+                </li>
+              </ul>
+              <p class="fst-italic">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
             </div>
           </div>
@@ -224,7 +286,11 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-     <!--Sumo Script-->                         
+                                   
+    <!--Sumo Script-->                         
     <script async>(function(s,u,m,o,j,v){j=u.createElement(m);v=u.getElementsByTagName(m)[0];j.async=1;j.src=o;j.dataset.sumoSiteId='a3d72ba0d9cc8a32aa2d491e3947d05216130ed8000d594cc2d60e57d8c043d1';v.parentNode.insertBefore(j,v)})(window,document,'script','//load.sumo.com/');</script>
+
+ <!--Sumo Script-->                         
+
   </body>
 </html>
