--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 <!--slider-->
         
 <!-- #region Jssor Slider Begin -->
-        <h3>Promoted</h3>
+         <div class="section-title">
+            <h2>Prmoted</h2>
     <script src="js/jssor.slider-28.1.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         window.jssor_1_slider_init = function() {
