--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 <!--slider-->
         
 <!-- #region Jssor Slider Begin -->
-         <div class="section-title">
-            <h2>Prmoted</h2>
+        <center> <h2>Prmoted</h2> </center>
     <script src="js/jssor.slider-28.1.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         window.jssor_1_slider_init = function() {
