--- a/dex.html
+++ b/dex.html
@@ -2,8 +2,8 @@
 
 <html lang="en">
   <head>
-    <title>Tame Functional Ferret</title>
-    <meta property="og:title" content="Tame Functional Ferret" />
+    <title>Engineer Guide</title>
+    <meta property="og:title" content="Engineer Guide" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -134,7 +134,7 @@
                 rel="noreferrer noopener"
                 class="home-link1 button"
               >
-                Get Started
+                Buy Now
               </a>
               <a
                 href="https://amzn.to/3QjnoXp"
@@ -142,7 +142,7 @@
                 rel="noreferrer noopener"
                 class="home-link2 button"
               >
-                Learn More
+                Browse More
               </a>
             </div>
             <span class="home-text2">
